# prelegal-

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: README.md  pyproject.toml
backend/app/: auth.py  chat.py  db.py  document_templates.py  documents.py  main.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_db.py  test_discover.py  test_document_templates.py  test_documents.py  test_health.py
data/templates/: README.md  affidavit.json  cease_and_desist_letter.json  employment_offer_letter.json  index.json  last_will_and_testament.json  nda.json  power_of_attorney.json  rental_agreement.json  service_agreement.json
data/templates/schema/: template.schema.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: discovery-chat.tsx  globals.css  layout.tsx  nda-creator.tsx  page-header.tsx  page.tsx  theme-toggle.tsx
frontend/app/documents/[id]/: document-creator.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/my-documents/: document-list.tsx  page.tsx
frontend/app/signup/: page.tsx
frontend/lib/: api.ts  auth-context.tsx  document-template.ts  nda-template.ts  template-loader.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
